--- a/craft/templates/_partials/meta.html
+++ b/craft/templates/_partials/meta.html
@@ -1,31 +1,1 @@
-<meta charset="utf-8" />
-<title>{% if (title is defined) and (not isHomepage) %}{{ title }} - {% endif %}{{ siteName }}</title>
-<meta name="description" content="{{ description }}" />
-
-<link rel="canonical" href="{{ url }}" />
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="home" href="{{ siteUrl }}" />
-
-{# Open Graph stuff. #}
-<meta property="og:url" content="{{ url }}" />
-<meta property="og:title" content="{{ title }}" />
-<meta property="og:description" content="{{ description }}" />
-<meta property="og:site_name" content="{{ siteName }}" />
-{% if image %}<meta property="og:image" content="{{ image }}" />{% endif %}
-<meta property="og:type" content="{{ type }}" />
-<meta property="og:locale" content="en_GB" />
-
-{# language stuff. #}
-{% if entry is defined %}
-    {% set otherLocales = craft.i18n.getSiteLocaleIds()|without(craft.config.mainLocale) %}
-    {% for locale in otherLocales %}
-
-        {% set localeEntry = craft.entries.id(entry.id).locale(locale).first %}
-
-        {% if (localeEntry) and (localeEntry.locale == locale) %}
-            <link rel="alternate" hreflang="{{ craft.config.locales[locale].languageCode }}" href="{{ localeEntry.getUrl() }}" />
-        {% endif %}
-
-    {% endfor %}
-{% endif %}
+{% include '_core/_partials/meta' %}
