--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -1,15 +1,1 @@
-{% extends "_layouts/default" %}
-
-{% block content %}
-
-	{% set image = entry.leadImage.first() %}
-
-	{% include '_partials/picture' with {
-		'image' : image,
-		'baseTransform' : 'example',
-		'type' : 'fluid'
-	} %}
-
-	<p>test</p>
-
-{% endblock %}
+{% include '_core/index' %}
