--- a/craft/templates/_core/_macros/general.html
+++ b/craft/templates/_core/_macros/general.html
@@ -1,4 +1,25 @@
-{% include '_core/_macros/general' %}
+{#
+formatDate.
+Pass in a date, and it'll return that date nicely formatted per locale.
+The dateFormat setting is in config/general.php
+#}
+{% macro formatDate(date='Now', format=null) %}{% spaceless %}
+
+	{% if format == null %}
+		{% set format = craft.config.locales[craft.locale].dateFormat %}
+	{% endif %}
+
+	{{ date|date(format) }}
+	
+{% endspaceless %}{% endmacro %}
+
+
+
+
+
+
+
+
 
 {#
 getTheme.
