--- a/craft/templates/_layouts/default.html
+++ b/craft/templates/_layouts/default.html
@@ -1,13 +1,1 @@
-{% import '_macros/general' as macros %}
-{% import '_macros/transforms' as transforms %}
-
-{% set isHomepage = (entry is defined ? entry.section.isHomepage() : false) %}
-
-{% include '_partials/header' %}
-
-<main>
-	{% block content %}
-	{% endblock %}
-</main>
-
-{% include '_partials/footer' %}
+{% extends '_core/_layouts/default' %}
