Adaptions to make sure we can use the core.

--- a/craft/templates/_core/_layouts/default.html
+++ b/craft/templates/_core/_layouts/default.html
@@ -1,5 +1,5 @@
+{% import '_core/_macros/general' as core %}
 {% import '_macros/general' as macros %}
-{% import '_core/_macros/transforms' as transforms %}
 
 {% set isHomepage = (entry is defined ? entry.section.isHomepage() : false) %}
 
