--- a/craft/templates/_core/404.html
+++ b/craft/templates/_core/404.html
@@ -2,10 +2,13 @@
     {% set entry = craft.entries.uri('404').first() %}
 {% endif %}
 
-{% extends "_layouts/default" %}
-{% set title = "404" %}
-{% set alternativeTracking %}ga('send', 'pageview', '/404/?url=' + document.location.pathname + document.location.search + '&ref=' + document.referrer);{% endset %}
+{% embed "_layouts/default" %}
 
-{% block content %}
+	{% set title = "404" %}
+	{% set alternativeTracking %}ga('send', 'pageview', '/404/?url=' + document.location.pathname + document.location.search + '&ref=' + document.referrer);{% endset %}
 
-{% endblock %}
+	{% block content %}
+
+	{% endblock %}
+
+{% endembed %}
