Moved inline partials to snippets.

--- a/craft/templates/_core/_partials/header.html
+++ b/craft/templates/_core/_partials/header.html
@@ -10,7 +10,7 @@
 			'type' : 'website'
 		} %}
 
-		{% include '_partials/favicons' ignore missing %}
+		{% include '_partials/snippets/favicons' ignore missing %}
 
 		<style id="js-critical-css">
 			svg { opacity: 0; }
