--- a/craft/templates/_layouts/default.html
+++ b/craft/templates/_layouts/default.html
@@ -1,1 +1,8 @@
 {% extends '_core/_layouts/default' %}
+
+{% set fonts = ['font-one', 'font-two'] %}
+
+{% set stylesheets = {
+	'mainStyles' : '/assets/css/main.css',
+	'fontStyles' : '/assets/css/fonts.css'
+} %}
