--- a/craft/templates/_core/_partials/structure/header.html
+++ b/craft/templates/_core/_partials/structure/header.html
@@ -14,11 +14,8 @@
 
 		<style id="js-critical-css">
 			svg { opacity: 0; }
-			{% include ['_partials/inline/' ~ (entry is defined ? entry.slug : 'critical') ~ '.css', '_partials/inline/critical.css'] ignore missing %}
+			{% include ['_partials/snippets/' ~ (entry is defined ? entry.slug : 'critical') ~ '.css', '_partials/snippets/critical.css'] ignore missing %}
 		</style>
 
 	</head>
 	<body>
-		<header>
-			<h1>{{ siteName }}</h1>
-		</header>
