Added core scss.

--- a/src/assets/scss/_core/components/_wysiwyg.scss
+++ b/src/assets/scss/_core/components/_wysiwyg.scss
@@ -3,5 +3,12 @@
 	Custom type styles applied to wysiwyg content from the CMS.
 */
 .wysiwyg-content {
-	
+
+	p:first-child {
+		margin-top: 0;
+	}
+	p:last-child {
+		margin-bottom: 0;
+	}
+
 }
