--- a/src/assets/scss/_core/_misc.scss
+++ b/src/assets/scss/_core/_misc.scss
@@ -1,4 +1,8 @@
 /*
-    Inbox.
+    Inbox
     Unsure of where something lives? Leave it here for a lead FE dev to sort
 */
+
+.loadcss-check {
+	background-color: rgb(255, 192, 203);
+}
