--- a/src/assets/scss/base/utils/_functions.scss
+++ b/src/assets/scss/base/utils/_functions.scss
@@ -1,83 +1,3 @@
 /*
-	Functions
+	Functions.
 */
-
-/*
-Get Color
-Returns a specific theme colour from the map $theme.
-*/
-@function get-color($id, $theme) {
-	@return map-get(map-get($color-schemes, $id), $theme);
-}
-
-/*
-Hover Color Picker
-Asseses the darkness of a color & decides if the hover should be lighter or darker
-*/
-@function hover-picker($color) {
-
-	@if lightness($color) > 60 {
-		@return darken($color, 20);
-	} @else {
-		@return lighten($color, 20);
-	}
-
-}
-
-/*
-Tint and Shade.
-Alternative to lighten and darken.
-*/
-@function tint($color, $percent) {
-  @return mix(white, $color, $percent);
-}
-
-@function shade($color, $percent) {
-  @return mix(black, $color, $percent);
-}
-
-/*
-Magic Number.
-Converts magic number pixel values to ems.
-*/
-@function magic-number($font-size: 16, $multiplier: 'm') {
-
-	@if ($multiplier == 'm') {
-		$multiplier: 1;
-	} @elseif ($multiplier == 'xs') {
-		$multiplier: 0.375;
-	} @elseif ($multiplier == 's') {
-		$multiplier: 0.625;
-	} @elseif ($multiplier == 'l') {
-		$multiplier: 2;
-	} @elseif ($multiplier == 'xl') {
-		$multiplier: 3;
-	} @elseif ($multiplier == 'xxl') {
-		$multiplier: 5;
-	}
-
-	$mn: 40;
-
-	@return ((($mn * $multiplier) / $font-size) * 1em);
-}
-
-
-
-
-
-
-
-
-
-/*
-Text Colour Picker
-*/
-@function text-color-picker($color) {
-
-	@if lightness($color) > 60 {
-		@return $color-text-dark;
-	} @else {
-		@return $color-text-light;
-	}
-
-}
