Bunch of core template stuff.

--- a/craft/templates/_core/_partials/structure/header.html
+++ b/craft/templates/_core/_partials/structure/header.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="{{ craft.config.locales[craft.locale].languageCode }}" class="no-webfonts">
 	<head>
 
-		{% include '_partials/meta' with {
+		{% include '_partials/structure/meta' with {
 			'url' : entry.getUrl(),
 			'title' : entry.title,
 			'description' : (entry['description'] is defined ? entry.description : ''),
