Updated calls to the picture partial

--- a/craft/templates/_core/_partials/components/editorial/image/full.html
+++ b/craft/templates/_core/_partials/components/editorial/image/full.html
@@ -4,7 +4,7 @@
 {% if image %}
 	<div class="page__section page__section--full image">
 		<div class="editorial__image editorial__image--full">
-			{% include '_partials/picture' with {
+			{% include '_partials/components/picture' with {
 				'image' : image,
 				'baseTransform' : 'editorialFull',
 				'type' : fluid
