--- a/craft/templates/_core/_partials/components/editorial/image/inline.html
+++ b/craft/templates/_core/_partials/components/editorial/image/inline.html
@@ -4,7 +4,7 @@
 {% if image %}
 	<div class="page__section page__section--body">
 		<div class="editorial__image">
-			{% include '_partials/picture' with {
+			{% include '_partials/components/picture' with {
 				'image' : image,
 				'baseTransform' : 'editorialMid',
 				'type' : 'fluid'
