--- a/craft/templates/_core/_partials/components/editorial/quotes/withimage.html
+++ b/craft/templates/_core/_partials/components/editorial/quotes/withimage.html
@@ -6,7 +6,7 @@
 	<div class="page__section page__section--body">
 		<div class="block-quote block-quote--has-image">
 			<div class="block-quote__image-area">
-				{% include '_partials/picture' with {
+				{% include '_partials/components/picture' with {
 					'image' : image ?? null,
 					'baseTransform' : 'quoteImage',
 					'type' : 'fixed'
