--- a/craft/templates/_core/_partials/components/editorial/statements/withimage.html
+++ b/craft/templates/_core/_partials/components/editorial/statements/withimage.html
@@ -5,7 +5,7 @@
 	<div class="page__section page__section--body">
 		<div class="editorial__statement statement statement--has-image">
 			<div class="statement__image-area">
-				{% include '_partials/picture' with {
+				{% include '_partials/components/picture' with {
 					'image' : image,
 					'baseTransform' : 'statementImage',
 					'type' : 'fixed'
