--- a/craft/templates/_core/_partials/components/teasers/article.html
+++ b/craft/templates/_core/_partials/components/teasers/article.html
@@ -7,8 +7,8 @@
 
 		{% if (showImage and image) %}
 			<div class="teaser__background">
-				{% include '_partials/picture' with {
-					'fixedHeight' : true,
+				{% include '_partials/components/picture' with {
+					'type' : 'fixed',
 					'image' : image,
 					'baseTransform' : (teaserSize == 'full' ? 'articleTeaserFull' : 'articleTeaserHalf')
 				} %}
