--- a/craft/templates/_core/_partials/components/footer.html
+++ b/craft/templates/_core/_partials/components/footer.html
@@ -28,10 +28,10 @@
 					<div class="footer__logo">
 						{% set footerImage = footer.footerLogo.first() %}
 						{% if footerImage %}
-							{% include '_partials/picture' with {
+							{% include '_partials/components/picture' with {
 								'image' : footerImage,
 								'baseTransform' : 'footerLogo',
-								'fixedHeight' : false
+								'type' : 'fluid'
 							} %}
 						{% endif %}
 					</div>
