--- a/src/assets/scss/base/project/_variables.scss
+++ b/src/assets/scss/base/project/_variables.scss
@@ -72,8 +72,8 @@ $susy-mouse: (
 Fonts.
 Here's where you declare font families, weights etc.
 */
-$font-sans: sans-serif;
-$font-serif: serif;
+$font-sans: "ITC Franklin Gothic W01", Arial, "Helvetica Neue", Helvetica, sans-serif;
+$font-serif: "Beton W01", "Arial Narrow", Arial, sans-serif;
 
 
 
