Now type and variables are defined in core.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,11 @@
  *	[June 2016]
  *
  */
+
+@import '_core/base/project/_variables';
+@import 'base/project/_variables';
+
+
 @import '_core/core';
 @import 'base/__base';
 @import 'components/__components';
