--- a/craft/templates/_core/_partials/components/picture.html
+++ b/craft/templates/_core/_partials/components/picture.html
@@ -7,7 +7,7 @@
 {% set breakpoints = breakpoints ?? defaultBreakpoints %}
 
 {% if image and type %}
-	<picture class="image-container{% if type == 'fixed' %} image-container--fixed-height{% elseif type == 'fluid' %} image-container--fluid-height{% elseif type == 'centred' %} image-container--centred{% endif %}">
+	<picture class="image-container{% if type == 'fixed' %} image-container--fixed-height{% elseif type == 'fluid' %} image-container--fluid-height{% elseif type == 'centred' %} image-container--centred{% endif %}">{% spaceless %}
 		<!--[if IE 9]><video style="display: none;"><![endif]-->
 
 		{# loop through the image's alternativeImages field, if it exists, and
@@ -35,6 +35,6 @@
 
 		<!--[if IE 9]></video><![endif]-->
 		<img {{ srcAttr }}="{{ core.getTransform(image, baseTransform, 'mouse') }}" src="" alt="{{ alt }}" class="image__image{% if lazyLoad %} js-lazyLoad{% endif %}">
-	</picture>
+	{% endspaceless %}</picture>
 	{% if lazyLoad %}<span class="visuallyhidden" href="{{ image.getUrl() }}"></span>{% endif %}
 {% endif %}
