Allowing for alternativeImages to not exist.

--- a/craft/templates/_core/_partials/components/picture.html
+++ b/craft/templates/_core/_partials/components/picture.html
@@ -15,7 +15,7 @@
 		images for different breakpoints. #}
 		{% set imageMap = [] %}
 		{% set currentImage = image %}
-		{% set altImages = image['alternativeImages'] %}
+		{% set altImages = image['alternativeImages'] ?? [] %}
 		{% for key,value in breakpoints %}
 			{% for altImage in altImages %}
 				{% if altImage.context.value == key %}
