Now using ems for breakpoints.

--- a/craft/templates/_core/_layouts/default.html
+++ b/craft/templates/_core/_layouts/default.html
@@ -2,10 +2,10 @@
 {% import '_macros/general' as macros %}
 
 {% set defaultBreakpoints = {
-	"bear" : "1041px",
-	"wolf" : "801px",
-	"fox" : "601px",
-	"rabbit" : "481px",
+	"bear" : (1041 / 16) ~ "em",
+	"wolf" : (801 / 16) ~ "em",
+	"fox" : (601 / 16) ~ "em",
+	"rabbit" : (481 / 16) ~ "em",
 	"mouse" : 0
 } %}
 
