Adjusted the franklin font weight.

--- a/src/assets/scss/_core/base/project/_typography.scss
+++ b/src/assets/scss/_core/base/project/_typography.scss
@@ -26,13 +26,13 @@ $type-styles: (
 			),
 			bold: (
 				letter-spacing: 0.03em,
-				font-weight: bold
+				font-weight: 500
 			),
 			bold-uppercase: (
 				text-transform: uppercase,
 				letter-spacing: 0.094em,
 				line-height: 1.4,
-				font-weight: bold
+				font-weight: 500
 			)
 		)
 	),
